--- a/index.html
+++ b/index.html
@@ -88,19 +88,95 @@
 
         </div>
     </section>
+    <section class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="service-text">
+                    <hr>
+                    <h1>Services.</h1>
+                    <p>WE WORK WITH YOU, NOT FOR YOU</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                       <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service-item">
+                        <div class="service-ico"></div>
+                        <h4></h4>
+                       <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="vendors/jquery-3.5.1.min.js"></script>
     <script src="vendors/bootstrap.js"></script>
     <script>
         function menuOpen() {
             document.querySelector(".menu").style = "display:block"
-                // document.querySelector(".close-menu").style = "display:block"
+                document.querySelector(".home-section").style = "display:none"
 
         }
 
         function menuClose() {
             document.querySelector(".menu").style = "display:none"
-                // document.querySelector(".close-menu").style = "display:none"
+            document.querySelector(".home-section").style = "display:block"
 
 
         }
